--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,24 @@ body {
   @apply bg-gray-900 text-gray-100;
   -webkit-font-smoothing: antialiased;
 }
+
+::-webkit-scrollbar{
+    width: 0.5rem;
+    height: 0.5rem;
+}
+
+::-webkit-scrollbar-track{
+    background-color: #0d0d0f;
+    border-radius: 10px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background-color: #053a37;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #00854a;
+}
